dynamic number checking works. functionally done.
I learned that there is an  event that fires when entering anything into an input field. Might make it look a little prettier but for now it does what it needs to do the way I want it.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form id="fizz-form">
       <input type="number" name="number" id="number-input" />
     </form>
-    <h2 id="result"></h2>
+    <h2 id="result">0</h2>
   </main>
 
 </body>
