script was loading before dom, moved to bottom of the body

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>FizzBuzz</title>
   <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
-  <script src="fizzbuzz.js"></script>
+  <link rel="stylesheet" href="styles/style.css">?
 </head>
 <body>
   <main>
@@ -16,5 +15,6 @@
     <h2 id="result">0</h2>
   </main>
 
+<script src="fizzbuzz.js"></script>
 </body>
 </html>
